--- a/.psqlrc-9.3
+++ b/.psqlrc-9.3
@@ -6,6 +6,7 @@
 \set COMP_KEYWORD_CASE upper
 \timing
 \set VERBOSITY verbose
+\set ON_ERROR_ROLLBACK interactive
 \set version 'SELECT version();'
 \set extensions 'select * from pg_available_extensions;'
 \set HISTSIZE 2000
